--- a/switchhosts/PKGBUILD
+++ b/switchhosts/PKGBUILD
@@ -16,7 +16,7 @@ conflicts=(
 depends=('electron')
 makedepends=(
     'nodejs'
-    'npm'
+    'yarn'
 )
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/v${pkgver}/SwitchHosts-v${pkgver}.tar.gz")
 sha256sums=(
@@ -25,16 +25,16 @@ sha256sums=(
 
 prepare() {
     cd SwitchHosts-${pkgver}
-    npm install
+    yarn install
 }
 
 build() {
     cd SwitchHosts-${pkgver}
     local i686=ia32 x86_64=x64 armv7h=armv7l aarch64=arm64
 #    npm install --no-audit --no-progress --no-fund --ignore-scripts electron@"$(</usr/lib/electron/version)"
-    npm run build
+    yarn run version:up && concurrently \"yarn run build:main\" \"yarn run build:renderer\"
     sed -i "s#deb:x64#pacman:${!CARCH}#g" scripts/make.js
-    npm run make 
+    yarn run make 
 }
 
 package() {
