--- a/switchhosts/PKGBUILD
+++ b/switchhosts/PKGBUILD
@@ -13,35 +13,45 @@ conflicts=(
     'switchhosts-bin'
     'switchhosts-appimage'
 )
-depends=('electron')
 makedepends=(
     'nodejs'
-    'yarn'
+    'electron'
+    'npm'
 )
-source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/v${pkgver}/SwitchHosts-v${pkgver}.tar.gz")
+source=(
+    #"${pkgname}-${pkgver}.tar.gz::${url}/archive/v${pkgver}/SwitchHosts-v${pkgver}.tar.gz"
+    "${pkgname}-${pkgver}.zip::${url}/archive/refs/heads/master.zip"
+    )
 sha256sums=(
     '4a3ad76fa95103c4ba041a6220987d658fc57cb697cbbd0bdd43a66cd1b7cbff'
 )
 
 prepare() {
     cd SwitchHosts-${pkgver}
-    yarn install
+
+    # use system electron version
+    # see: https://wiki.archlinux.org/index.php/Electron_package_guidelines
+    sed -i "/electronDownload/,/}/d" scripts/make.js 
+    sed -i "/directories/i\  electronVersion: $(electron --version | tail -c +2)" scripts/make.js
+    sed -i "/directories/i\  electronDist: $(dirname $(realpath $(which electron)))/" scripts/make.js
+    # Set arch and target
+    local i686=ia32 x86_64=x64 armv7h=armv7l aarch64=arm64
+    sed -i "s/.*AppImage:x64.*$/    linux: ['pacman:build_arch']/" scripts/make.js
+    sed -i "s#build_arch#${!CARCH}#g" scripts/make.js
+    sed -i "/await makeMacArm/d" scripts/make.js
 }
 
 build() {
     cd SwitchHosts-${pkgver}
-    local i686=ia32 x86_64=x64 armv7h=armv7l aarch64=arm64
-#    npm install --no-audit --no-progress --no-fund --ignore-scripts electron@"$(</usr/lib/electron/version)"
-    sed -i "s#npm#yarn#g" package.json
-    sed -i "s#deb:x64#pacman:${!CARCH}#g" scripts/make.js
-    yarn run build || true
-    yarn run make 
+    npm install
+    npm run build
+    npm run make
 }
 
 package() {
     cd ${srcdir}
-    local i686=linux-ia32-unpacked x86_64=linux-unpacked armv7h=linux-arm7vl-unpacked aarch64=linux-arm64-unpacked
-    tar -xvf ${pkgname}-${pkgver}/dist/${!CARCH}/*.pacman -C ${pkgdir}
+    local i686=ia32 x86_64=x64 armv7h=armv7l aarch64=arm64
+    tar -xvf ${pkgname}-${pkgver}/dist/SwitchHosts-${!CARCH}.pacman -C ${pkgdir}
     rm -f ${pkgdir}/.PKGINFO ${pkgdir}/.MTREE ${pkgdir}/.INSTALL
 }
 
