Test build (switchhosts)

--- a/switchhosts/PKGBUILD
+++ b/switchhosts/PKGBUILD
@@ -5,7 +5,7 @@ pkgrel=1
 pkgdesc="An App for hosts management & switching."
 arch=(
     'any'
-    )
+)
 url="https://github.com/oldj/SwitchHosts"
 license=('Apache')
 provides=('switchhosts')
@@ -21,7 +21,7 @@ makedepends=(
 source=(
     #"${pkgname}-${pkgver}.tar.gz::${url}/archive/v${pkgver}/SwitchHosts-v${pkgver}.tar.gz"
     "${pkgname}-${pkgver}.zip::${url}/archive/refs/heads/master.zip"
-    )
+)
 sha256sums=(
     #'4a3ad76fa95103c4ba041a6220987d658fc57cb697cbbd0bdd43a66cd1b7cbff'
     '7bd4de59cb3fbfa3ffa621bc71a3a14f83ce6594d9619982427ebb49c82f8abf'
@@ -33,9 +33,11 @@ prepare() {
 
     # use system electron version
     # see: https://wiki.archlinux.org/index.php/Electron_package_guidelines
-    sed -i "/electronDownload/,/}/d" scripts/make.js 
-    sed -i "/directories/i\  electronVersion: $(electron --version | tail -c +2)," scripts/make.js
-    sed -i "/directories/i\  electronDist: $(dirname $(realpath $(which electron)))," scripts/make.js
+    electronDist=$(dirname $(realpath $(which electron3)))
+    electronVer=$(electron3 --version | tail -c +2)
+    sed -i "/electronDownload/,/}/d" scripts/make.js
+    sed -i "/directories/i\  electronVersion: $electronDist," scripts/make.js
+    sed -i "/directories/i\  electronDist: $electronVer," scripts/make.js
     # Set arch and target
     local i686=ia32 x86_64=x64 armv7h=armv7l aarch64=arm64
     sed -i "s/.*AppImage:x64.*$/    linux: ['pacman:build_arch'],/" scripts/make.js
