--- a/switchhosts/PKGBUILD
+++ b/switchhosts/PKGBUILD
@@ -37,7 +37,7 @@ prepare() {
     electronVer=$(electron13 --version | tail -c +2)
     sed -i "/electronDownload/,/}/d" scripts/make.js
     sed -i "/directories/i\  electronVersion: \`$electronVer\`," scripts/make.js
-    sed -i "/directories/i\  electronDist: \`/usr/lib/electron\`," scripts/make.js
+    #sed -i "/directories/i\  electronDist: \`/usr/lib/electron\`," scripts/make.js
     # Set arch and target
     local i686=ia32 x86_64=x64 armv7h=armv7l aarch64=arm64
     sed -i "s/.*AppImage:x64.*$/    linux: ['pacman:build_arch'],/" scripts/make.js
