--- a/switchhosts/PKGBUILD
+++ b/switchhosts/PKGBUILD
@@ -1,6 +1,7 @@
 # Maintainer: Qingxu <me@linioi.com>
 pkgname=switchhosts
 pkgver=4.0.3
+_subpkgver=6070
 pkgrel=1
 pkgdesc="An App for hosts management & switching."
 arch=(
@@ -19,17 +20,14 @@ makedepends=(
     'npm'
 )
 source=(
-    #"${pkgname}-${pkgver}.tar.gz::${url}/archive/v${pkgver}/SwitchHosts-v${pkgver}.tar.gz"
-    "${pkgname}-${pkgver}.zip::${url}/archive/refs/heads/master.zip"
+    "${pkgname}-${pkgver}.tar.gz::${url}/archive/v${pkgver}/SwitchHosts-v${pkgver}.tar.gz"
 )
 sha256sums=(
-    #'4a3ad76fa95103c4ba041a6220987d658fc57cb697cbbd0bdd43a66cd1b7cbff'
-    '7bd4de59cb3fbfa3ffa621bc71a3a14f83ce6594d9619982427ebb49c82f8abf'
+    '4a3ad76fa95103c4ba041a6220987d658fc57cb697cbbd0bdd43a66cd1b7cbff'
 )
 
 prepare() {
-    # cd SwitchHosts-${pkgver}
-    cd SwitchHosts-master
+    cd SwitchHosts-${pkgver}
     sed -i "/mirror:/d" scripts/make.js 
     # use system electron version
     # see: https://wiki.archlinux.org/index.php/Electron_package_guidelines
@@ -48,8 +46,7 @@ prepare() {
 }
 
 build() {
-    #cd SwitchHosts-${pkgver}
-    cd SwitchHosts-master
+    cd SwitchHosts-${pkgver}
     npm install
     npm run build
     npm run make
@@ -57,9 +54,7 @@ build() {
 
 package() {
     cd ${srcdir}
-    local i686=ia32 x86_64=amd64 armv7h=armv7l aarch64=arm64
-    _sub_ver=$(cat SwitchHosts-master/src/version.json | sed "s/]/ /" | awk '{print $NF}')
-    tar -xvf SwitchHosts-master/dist/SwitchHosts_linux_${pkgver}\(${_sub_ver}\).pacman -C ${pkgdir}
+    tar -xvf SwitchHosts-${pkgver}/dist/SwitchHosts_linux_${pkgver}\(${_subpkgver}\).pacman -C ${pkgdir}
     rm -f ${pkgdir}/.PKGINFO ${pkgdir}/.MTREE ${pkgdir}/.INSTALL
 }
 
