--- a/.github/workflows/push_aur.yml
+++ b/.github/workflows/push_aur.yml
@@ -1,72 +1,72 @@
 name: "Update AUR"
 
 on:
-  push:
-  schedule:
-    - cron: "0 0 * * 6"
-  workflow_dispatch:
+    push:
+    schedule:
+        - cron: "0 0 * * 6"
+    workflow_dispatch:
 
 jobs:
-  generate-matrix:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Generate matrix
-        id: gen-matrix
-        run: echo "::set-output name=packages::$(ls */ -d | cut -f1 -d'/' | jq -R . | jq -cs .)"
-    outputs:
-      packages: ${{ steps.gen-matrix.outputs.packages }}
+    generate-matrix:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - name: Generate matrix
+              id: gen-matrix
+              run: echo "::set-output name=packages::$(ls */ -d | cut -f1 -d'/' | jq -R . | jq -cs .)"
+        outputs:
+            packages: ${{ steps.gen-matrix.outputs.packages }}
 
-  aur:
-    runs-on: ubuntu-latest
-    needs: generate-matrix
-    strategy:
-      fail-fast: false
-      matrix:
-        pkgname: ${{ fromJson(needs.generate-matrix.outputs.packages) }}
+    aur:
+        runs-on: ubuntu-latest
+        needs: generate-matrix
+        strategy:
+            fail-fast: false
+            matrix:
+                pkgname: ${{ fromJson(needs.generate-matrix.outputs.packages) }}
 
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+        steps:
+            - uses: actions/checkout@v2
+              with:
+                  fetch-depth: 0
 
-      - name: Install SSH key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.SSH_KEY }}
-          known_hosts: ${{ secrets.KNOWN_HOSTS }}
+            - name: Install SSH key
+              uses: shimataro/ssh-key-action@v2
+              with:
+                  key: ${{ secrets.SSH_KEY }}
+                  known_hosts: ${{ secrets.KNOWN_HOSTS }}
 
-      - name: Check PKGBUILD
-        id: build-test
-        uses: ouuan/pkgbuild-action@f2b314d7fd3bfbe8432ca42da2f37b1fa9a208d2
-        with:
-          path: ${{ matrix.pkgname }}
+            - name: Check PKGBUILD
+              id: build-test
+              uses: ouuan/pkgbuild-action@v1.2.0
+              with:
+                  path: ${{ matrix.pkgname }}
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: ${{ matrix.pkgname }}-${{ github.run_id }}
-          path: ${{ steps.build-test.outputs.pkgfile }}
+            - uses: actions/upload-artifact@v4
+              with:
+                  name: ${{ matrix.pkgname }}-${{ github.run_id }}
+                  path: ${{ steps.build-test.outputs.pkgfile }}
 
-      - name: Clone AUR and update
-        run: |
-          message="$(git log -n1 --pretty='%B' "${{ matrix.pkgname }}")"
-          git clone ssh://aur@aur.archlinux.org/${{ matrix.pkgname }}.git ../aur
-          shopt -s dotglob
-          shopt -s extglob
-          rm ../aur/!(.git|.|..) || true
-          cp -r ${{ matrix.pkgname }}/*  ../aur
-          cd ../aur
-          git config user.name ${{ secrets.AUR_USER }}
-          git config user.email ${{ secrets.AUR_EMAIL }}
-          git add -A
-          escape() {
-            local content="$1"
-            content="${content//'%'/'%25'}"
-            content="${content//$'\n'/'%0A'}"
-            content="${content//$'\r'/'%0D'}"
-            echo "$content"
-          }
-          git diff-index @ --exit-code --quiet || ( git commit -m "Update from GitHub Actions: $message
+            - name: Clone AUR and update
+              run: |
+                  message="$(git log -n1 --pretty='%B' "${{ matrix.pkgname }}")"
+                  git clone ssh://aur@aur.archlinux.org/${{ matrix.pkgname }}.git ../aur
+                  shopt -s dotglob
+                  shopt -s extglob
+                  rm ../aur/!(.git|.|..) || true
+                  cp -r ${{ matrix.pkgname }}/*  ../aur
+                  cd ../aur
+                  git config user.name ${{ secrets.AUR_USER }}
+                  git config user.email ${{ secrets.AUR_EMAIL }}
+                  git add -A
+                  escape() {
+                    local content="$1"
+                    content="${content//'%'/'%25'}"
+                    content="${content//$'\n'/'%0A'}"
+                    content="${content//$'\r'/'%0D'}"
+                    echo "$content"
+                  }
+                  git diff-index @ --exit-code --quiet || ( git commit -m "Update from GitHub Actions: $message
 
-          https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}" && echo "::warning::Pushed to AUR:%0A$(escape "$message")" )
-          git push
+                  https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}" && echo "::warning::Pushed to AUR:%0A$(escape "$message")" )
+                  git push
