ci: update pkgbuild-action parameters
Update the ouuan/pkgbuild-action configuration to use the 'path'
input instead of 'target' and 'pkgname'. This aligns with the action's
current API. Includes a minor formatting fix in xremap-niri-bin.

--- a/.github/workflows/push_aur.yml
+++ b/.github/workflows/push_aur.yml
@@ -40,8 +40,7 @@ jobs:
               id: build-test
               uses: ouuan/pkgbuild-action@f2b314d7fd3bfbe8432ca42da2f37b1fa9a208d2
               with:
-                  target: pkgbuild
-                  pkgname: ${{ matrix.pkgname }}
+                  path: ${{ matrix.pkgname }}
 
             - uses: actions/upload-artifact@v4
               with:
