ci: update pkgbuild-action to master
Update the ouuan/pkgbuild-action step in the push_aur workflow to use
the master branch instead of a pinned commit hash.

--- a/.github/workflows/push_aur.yml
+++ b/.github/workflows/push_aur.yml
@@ -38,7 +38,7 @@ jobs:
 
             - name: Check PKGBUILD
               id: build-test
-              uses: ouuan/pkgbuild-action@f2b314d7fd3bfbe8432ca42da2f37b1fa9a208d2
+              uses: ouuan/pkgbuild-action@master
               with:
                   path: ${{ matrix.pkgname }}
 
