--- a/yamlresume/PKGBUILD
+++ b/yamlresume/PKGBUILD
@@ -8,6 +8,7 @@ arch=('any')
 url="https://github.com/yamlresume/yamlresume"
 license=('MIT')
 depends=('nodejs')
+makedepends=('npm')
 source=("https://registry.npmjs.org/${pkgname}/-/${pkgname}-${pkgver}.tgz")
 sha256sums=('eecf19120041bedfa4027bf3d95e98cc6cd82b8822816907db991286c4e8c490')
 noextract=("${pkgname}-${pkgver}.tgz")
